* TestingContextFactory: Declared ctx volatile.